Section 4 - API Identity

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenKey": "super secret long asddsa adluagfljabydv jlatgrf ajkbf,msdhvn n,kfvbgjagsdc,hnsdbf,jaeugbfjs,dvbldfjvhudfjslvba,jrbfaliwduchiasugydvjkbvflsdkjgrn;oerihi",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating.db"
