--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,11 @@
   },
   "TokenKey": "super secret long asddsa adluagfljabydv jlatgrf ajkbf,msdhvn n,kfvbgjagsdc,hnsdbf,jaeugbfjs,dvbldfjvhudfjslvba,jrbfaliwduchiasugydvjkbvflsdkjgrn;oerihi",
   "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dhjbw9w8s",
+    "ApiKey": "133536321371815",
+    "ApiSecret": "I9yYLZxkd3cWwqHfoYRjadUiHbQ"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating.db"
   }
