--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "lightgallery": "^2.8.1",
+    "ng2-file-upload": "^7.0.1",
     "ngx-bootstrap": "^18.1.3",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
