--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "lightgallery": "^2.8.1",
+    "ng-gallery": "^12.0.0",
     "ng2-file-upload": "^7.0.1",
     "ngx-bootstrap": "^18.1.3",
     "ngx-spinner": "^17.0.0",
@@ -42,5 +43,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2"
+  },
+  "overrides": {
+    "ng-gallery": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    }
   }
 }
