pre continuous integration

--- a/client/angular.json
+++ b/client/angular.json
@@ -13,7 +13,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/client",
+            "outputPath": {
+              "base": "../API/wwwroot",
+              "browser": ""
+            },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -46,8 +49,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -55,6 +58,11 @@
                   "maximumError": "4kB"
                 }
               ],
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false
+                }
+              },
               "outputHashing": "all"
             },
             "development": {
@@ -72,11 +80,6 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          // "options": {
-          //   "ssl":true, 
-          //   "sslCert": "./ssl/localhost.pem",
-          //   "sslKey": "./ssl/localhost-key.pem"
-          // },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
@@ -113,5 +116,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7ca7214f-8f35-41ff-874c-b3fb9ad76fbf"
   }
 }
