--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -13,6 +13,6 @@
     "ApiSecret": "I9yYLZxkd3cWwqHfoYRjadUiHbQ"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=dating.db"
+    "DefaultConnection": "Server=localhost,1433;Database=DatingDB;User Id=SA;Password=Password@1;TrustServerCertificate=Yes"
   }
 }
