--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@microsoft/signalr": "^8.0.7",
+    "@microsoft/signalr": "7.0.14",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
